--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="nous-contacter">
+  <body id="faq">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
@@ -155,7 +155,208 @@
           <h1>Foire Aux Questions (FAQ)</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <div class="intro section">
+        <p>
+          Chez FO Transport 13, nous savons que vous avez des questions
+          importantes concernant votre adhésion, vos droits, et les services que
+          nous proposons. Cette page est conçue pour répondre à vos
+          interrogations les plus fréquentes de manière claire et concise.
+          <br /><br />
+          Si vous ne trouvez pas la réponse que vous cherchez, n’hésitez pas à
+          nous contacter directement. Le FO Transport 13 est là pour vous
+          accompagner !
+        </p>
+      </div>
+      <section class="section">
+        <div class="questions-answers">
+          <div class="question-item">
+            <div class="question">
+              <h2>1. Pourquoi adhérer à Force Ouvrière Transport 13 ?</h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Adhérer à Force Ouvrière Transport 13, c’est rejoindre une
+                communauté engagée pour défendre vos droits, améliorer vos
+                conditions de travail et obtenir un accompagnement juridique et
+                professionnel. Vous bénéficiez également d’un soutien dans
+                toutes vos démarches liées à votre activité dans le transport et
+                la logistique.
+              </p>
+            </div>
+          </div>
+
+          <div class="question-item">
+            <div class="question">
+              <h2>2. Quels sont les métiers concernés par le syndicat ?</h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Nous représentons tous les professionnels du secteur :
+                conducteurs routiers, logisticiens, manutentionnaires,
+                opérateurs de transport, agents administratifs, et bien
+                d'autres. Si vous travaillez dans le transport ou la logistique,
+                nous sommes là pour vous !
+              </p>
+            </div>
+          </div>
+
+          <div class="question-item">
+            <div class="question">
+              <h2>3. Comment puis-je adhérer ?</h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                L’adhésion est simple :
+                <br /><br />
+
+                Remplissez le formulaire disponible sur notre site web ou
+                contactez directement notre bureau départemental. Une fois votre
+                dossier validé, vous recevrez votre carte d’adhérent et pourrez
+                profiter de tous nos services.
+              </p>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="question">
+              <h2>4. Quels sont les frais d’adhésion ?</h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Les frais d’adhésion varient selon votre situation
+                professionnelle (actif, demandeur d’emploi, retraité, etc.).
+                Nous vous invitons à consulter notre page dédiée ou à nous
+                contacter pour connaître les tarifs actuels.
+              </p>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="question">
+              <h2>
+                5. Comment le syndicat peut-il m’aider en cas de conflit avec
+                mon employeur ?
+              </h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Nous proposons un accompagnement juridique complet :
+                <br /><br />
+                - Analyse de votre situation avec nos conseillers spécialisés.
+                <br />
+                - pour engager un dialogue avec votre employeur ou, si
+                nécessaire, entamer une procédure légale.
+                <br />
+
+                - Représentation devant les instances compétentes pour faire
+                valoir vos droits.
+              </p>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="question">
+              <h2>
+                6. Que faire si je veux participer à une action syndicale ?
+              </h2>
+
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Rien de plus simple ! Nous communiquons régulièrement sur nos
+                actions (manifestations, assemblées, réunions) via notre site
+                web, nos réseaux sociaux et nos newsletters. Inscrivez-vous pour
+                recevoir toutes les informations et rejoignez-nous lors de nos
+                prochaines mobilisations !
+              </p>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="question">
+              <h2>
+                7. Quels sont les avantages exclusifs pour les adhérents ?
+              </h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                En tant qu’adhérent, vous bénéficiez de :
+                <br /><br />
+                - Conseils et assistance personnalisés.
+                <br />
+                - Réduction sur certaines formations professionnelles.
+                <br />
+                - Accès à un réseau de partenaires pour des avantages divers
+                (assurance, services, etc.).
+              </p>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="question">
+              <h2>8. Où se situe le bureau de Force Ouvrière Transport 13 ?</h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Notre bureau départemental est situé à l'adresse suivante :
+                <br /><br />Syndicat Départemental Force Ouvrière des Transports
+                et de la Logistique des Bouches-du-Rhône <br /><br />
+                Vieille Bourse du Travail
+                <br />
+                Place Léon Jouhaux
+                <br />
+                13001 Marseille, France.
+                <br /><br />
+                Vous trouverez une carte vous permettant de voir l'itinéraire à
+                la page "<a href="./nous-contacter.html">Nous contacter</a>".
+                <br /><br />
+                Nous vous accueillons du lundi au vendredi, de 09h00 à 12h00 et
+                de 14h00 à 17h00.
+                <br /><br />
+                Vous pouvez également nous contacter par téléphone au :
+                <a href="tel:0491340034">04.91.34.00.34 </a> ou email à :
+                <a href="mailto:contact@fo-transport13.fr"
+                  >contact@fo-transport13.fr</a
+                >
+                pour toute question.
+              </p>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="question">
+              <h2>
+                9. Puis-je adhérer si je suis en reconversion professionnelle ou
+                à la retraite ?
+              </h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Oui, notre syndicat accueille les professionnels en reconversion
+                ainsi que les retraités. Nous proposons des services adaptés à
+                votre situation, notamment pour garantir une transition sereine
+                ou défendre vos droits acquis.
+              </p>
+            </div>
+          </div>
+          <div class="question-item">
+            <div class="question">
+              <h2>10. Comment puis-je me désinscrire du syndicat ?</h2>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="answer">
+              <p>
+                Si vous souhaitez vous désinscrire, contactez-nous directement
+                par email ou téléphone. Nous traiterons votre demande rapidement
+                tout en restant disponibles pour répondre à vos questions.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="cta">
         <div class="overlay">
           <h2>
@@ -197,5 +398,45 @@
       </div>
     </a>
     <script src="./assets/js/index.js"></script>
+    <script defer>
+      document.addEventListener("DOMContentLoaded", () => {
+        const questionItems = document.querySelectorAll(".question-item");
+
+        questionItems.forEach((item) => {
+          const question = item.querySelector(".question");
+          const answer = item.querySelector(".answer");
+
+          // Initialiser les réponses cachées
+          answer.style.maxHeight = "0";
+          answer.style.overflow = "hidden";
+          answer.style.transition = "max-height 0.3s ease";
+
+          // Ajouter l'événement de clic
+          question.addEventListener("click", () => {
+            const isOpen = answer.style.maxHeight !== "0px";
+
+            // Fermer toutes les autres questions
+            questionItems.forEach((otherItem) => {
+              const otherAnswer = otherItem.querySelector(".answer");
+              const otherIcon = otherItem.querySelector(".fa-chevron-down");
+
+              otherAnswer.style.maxHeight = "0";
+              if (otherIcon) {
+                otherIcon.style.transform = "rotate(0deg)";
+              }
+            });
+
+            // Ouvrir ou fermer la réponse cliquée
+            if (!isOpen) {
+              answer.style.maxHeight = answer.scrollHeight + "px";
+              const icon = question.querySelector(".fa-chevron-down");
+              if (icon) {
+                icon.style.transform = "rotate(180deg)";
+              }
+            }
+          });
+        });
+      });
+    </script>
   </body>
 </html>
