--- a/outils.html
+++ b/outils.html
@@ -91,23 +91,23 @@
                 >
                   <ul>
                     <li>
-                      <a href="./les-avantages-de-mon-adhesion.html"
+                      <a href="./vos-droits.html#avantages"
                         >Les avantages de mon adhésion</a
                       >
                     </li>
                     <li>
-                      <a href="./je-suis-elu-e-au-cse.html"
+                      <a href="./vos-droits.html#elu-au-cse"
                         >Je suis élu(e) au CSE</a
                       >
                     </li>
                     <li>
-                      <a href="./je-suis-mandate-e-par-mon-syndicat.html"
+                      <a href="./vos-droits.html#mandate-par-mon-syndicat"
                         >Je suis mandaté(e) par mon syndicat</a
                       >
                     </li>
                     <li>
                       <a
-                        href="./je-suis-mandate-e-par-mon-union-departementale.html"
+                        href="./vos-droits.html#mandate-par-mon-union-departementale"
                         >Je suis mandaté(e) par mon Union Départementale</a
                       >
                     </li>
