--- a/je-souhaite-adherer.html
+++ b/je-souhaite-adherer.html
@@ -155,7 +155,24 @@
           <h1>Je souhaite adhérer</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <section class="section">
+        <div class="selection-container">
+          <a href="./bulletin-adhesion-simple.html">
+            <div class="selection-item">
+              <div>
+                <h2>Adhésion simple</h2>
+              </div>
+            </div>
+          </a>
+          <a href="./bulletin-adhesion-juridique.html">
+            <div class="selection-item">
+              <div>
+                <h2>Adhésion juridique</h2>
+              </div>
+            </div>
+          </a>
+        </div>
+      </section>
 
       <section class="cta">
         <div class="overlay">
