--- a/je-souhaite-adherer.html
+++ b/je-souhaite-adherer.html
@@ -155,6 +155,19 @@
           <h1>Je souhaite adhérer</h1>
         </div>
       </section>
+      <div class="intro section">
+        <p>
+          Vous travaillez dans le secteur du transport ou de la logistique et
+          souhaitez défendre vos droits, bénéficier de conseils juridiques, et
+          rejoindre une communauté engagée ? L’adhésion à FO Transport 13 est la
+          première étape pour faire entendre votre voix et profiter des nombreux
+          avantages offerts à nos membres.
+          <br /><br />
+          Choisissez la formule qui correspond le mieux à vos besoins et
+          engagez-vous à nos côtés pour construire un avenir plus juste pour
+          tous les travailleurs de notre secteur.
+        </p>
+      </div>
       <section class="section">
         <div class="selection-container">
           <a href="./bulletin-adhesion-simple.html">
