--- a/bulletin-adhesion-simple.html
+++ b/bulletin-adhesion-simple.html
@@ -284,11 +284,7 @@
             </p>
           </div>
           <div>
-            <input
-              type="checkbox"
-              name="souhait-adhesion"
-              id="souhait-adhesion"
-            />
+            <input type="checkbox" name="approbation" id="aprobation" />
             <p>
               Je reconnais avoir lu et approuvé ce bulletin d'adhésion, ainsi
               que ces mentions.
