--- a/bulletin-adhesion-juridique.html
+++ b/bulletin-adhesion-juridique.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="adhesion-juridique">
+  <body id="adhesion">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
@@ -155,7 +155,148 @@
           <h1>Bulletin d'adhésion juridique</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <div class="intro section">
+        <p>
+          En tant qu’adhérent juridique, vous accédez à un accompagnement
+          renforcé pour défendre vos droits et faire face à des situations
+          complexes dans le cadre professionnel. Complétez le formulaire
+          d’adhésion juridique ci-dessous pour bénéficier de conseils et d’une
+          assistance sur mesure, adaptés à vos besoins spécifiques dans le
+          secteur du transport et de la logistique.
+          <br /><br />
+          Rejoignez-nous dès maintenant et assurez-vous d’être protégé et
+          soutenu dans toutes vos démarches !
+        </p>
+      </div>
+      <section class="adhesion-form section">
+        <form action="">
+          <div>
+            <input
+              type="text"
+              name="nom"
+              id="nom"
+              placeholder="Nom et prénom*"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="text"
+              name="datedenaissance"
+              id="date"
+              placeholder="Date de naissance*"
+              maxlength="10"
+              required
+            />
+            <input
+              type="text"
+              name="lieudenaissance"
+              id="lieudenaissance"
+              placeholder="Lieu de naissance"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="text"
+              name="adresse"
+              id="adresse"
+              placeholder="Adresse complète*"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="text"
+              name="tel-fixe"
+              id="tel-fixe"
+              maxlength="10"
+              placeholder="Téléphone fixe (facultatif)"
+            />
+            <input
+              type="text"
+              name="tel-portable"
+              id="tel-portable"
+              maxlength="10"
+              placeholder="Portable*"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              placeholder="Email*"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="text"
+              name="profession"
+              id="profession"
+              placeholder="Profession*"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="text"
+              name="nomdelentreprise"
+              id="nomdelentreprise"
+              placeholder="Nom de l'entreprise*"
+              required
+            />
+          </div>
+          <div>
+            <label for="adressedelentreprise"> </label>
+            <input
+              type="text"
+              name="adressedelentreprise"
+              id="adressedelentreprise"
+              placeholder="Adresse complete de l'entreprise*"
+              required
+            />
+          </div>
+
+          <div>
+            <input
+              type="text"
+              name="codenaf"
+              id="codenaf"
+              maxlength="5"
+              placeholder="Code N.A.F. (APE)*"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="checkbox"
+              name="souhait-adhesion"
+              id="souhait-adhesion"
+            />
+            <p>
+              Prix de la carte juridique : 400 € minimum, payable soit par
+              chèques, soit par prélèvements et je déclare adhérer au Syndicat
+              Départemental Force Ouvrière des Transports et de la Logistique
+              des Bouches-du-Rhône en m'acquittant de ma cotisation annuelle
+              soit par chèques, soit par prélèvements mensuels, soit par carte
+              bancaire, dont le montant est fixé chaque année par le bureau
+              exécutif et la Commission Administrative du Syndicat, pour toute
+              la durée de la procédure juridique en cours.
+            </p>
+          </div>
+          <div>
+            <input type="checkbox" name="approbation" id="aprobation" />
+            <p>
+              Je reconnais avoir lu et approuvé ce bulletin d'adhésion, ainsi
+              que ces mentions.
+            </p>
+          </div>
+          <button type="submit">Envoyer la demande</button>
+        </form>
+      </section>
 
       <section class="cta">
         <div class="overlay">
