--- a/bulletin-adhesion-simple.html
+++ b/bulletin-adhesion-simple.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="adhesion-simple">
+  <body id="adhesion">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
