--- a/vos-droits.html
+++ b/vos-droits.html
@@ -155,8 +155,106 @@
           <h1>Vos droits</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <section class="intro section">
+        <div class="content">
+          <p>
+            En tant qu'adhérent ou futur adhérent de FO Transport 13, vous avez
+            accès à un ensemble de droits et de protections spécifiques. Notre
+            mission est de défendre vos intérêts, vous informer sur vos droits
+            et vous accompagner dans toutes vos démarches liées à votre vie
+            professionnelle dans le secteur du transport et de la logistique.
+          </p>
+        </div>
+      </section>
 
+      <section id="droit-adherent" class="section">
+        <div class="content">
+          <h2>Vos droits en tant qu'adhérent</h2>
+          <p>En rejoignant FO Transport 13, vous bénéficiez :</p>
+          <ul>
+            <li>
+              D’une représentation active face à votre employeur et aux
+              institutions.
+            </li>
+            <li>
+              D’une assistance personnalisée pour toute question liée à vos
+              conditions de travail.
+            </li>
+            <li>
+              D’un accès à des formations syndicales pour mieux comprendre et
+              défendre vos droits.
+            </li>
+            <li>
+              De conseils juridiques adaptés à votre situation professionnelle.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="protection-juridique" class="section">
+        <div class="content">
+          <h2>Votre protection juridique</h2>
+          <p>
+            FO Transport 13 met à votre disposition une protection juridique
+            complète, incluant :
+          </p>
+          <ul>
+            <li>L’accompagnement en cas de litige avec votre employeur.</li>
+            <li>
+              L’accès à des juristes spécialisés dans le droit du travail.
+            </li>
+            <li>
+              Le soutien lors de démarches auprès des institutions sociales
+              (CPAM, URSSAF, etc.).
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="formation-syndicale" class="section">
+        <div class="content">
+          <h2>Formations et outils pour mieux vous défendre</h2>
+          <p>
+            Nous croyons en l’importance de vous donner les clés pour comprendre
+            vos droits. En tant qu’adhérent, vous pourrez participer à des
+            formations sur des thématiques variées, telles que :
+          </p>
+          <ul>
+            <li>Le rôle des représentants du personnel au sein du CSE.</li>
+            <li>
+              Les bases du droit du travail pour vous défendre efficacement.
+            </li>
+            <li>
+              Les négociations collectives et l’établissement d’accords locaux.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="soutien-specifique" class="section">
+        <div class="content">
+          <h2>Un soutien adapté à chaque situation</h2>
+          <p>
+            Que vous soyez salarié(e), représentant(e) du personnel, ou
+            mandaté(e) pour des missions syndicales, FO Transport 13 vous offre
+            un accompagnement spécifique selon votre rôle :
+          </p>
+          <ul>
+            <li>
+              <strong>Salarié(e) :</strong> Conseils pour défendre vos droits
+              individuels.
+            </li>
+            <li>
+              <strong>Élu(e) :</strong> Soutien pour vos responsabilités au sein
+              du CSE.
+            </li>
+            <li>
+              <strong>Mandaté(e) :</strong> Aide dans vos missions de
+              négociation et de représentation.
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="cta">
         <div class="overlay">
           <h2>
